--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
+      - run: rm -rf examples
       - run: npm install
       - run: npm run build
 
@@ -30,4 +31,4 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_PUBLISH}}
